--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -344,7 +344,6 @@
 			left: 0;
 			right: 0;
 			height: 400px;
-			z-index: -1;
 		}
 
 		.site-content {
